Hero background image and my image updated

--- a/Vistawebs_project/Portfolio/templates/index.html
+++ b/Vistawebs_project/Portfolio/templates/index.html
@@ -59,7 +59,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="about-image animate-card from-left">
-                <img src="{% static 'images/mypic_wine.jpg' %}" alt="About Me">
+                <img src="{% static 'images/My_image_black_bg.png' %}" alt="About Me">
             </div>
             <div class="about-content animate-card from-right">
                 <h4 class="underline ">Learn about me</h4>
@@ -308,7 +308,7 @@
         <div class="container">
             <p>©2025. All right reserved by vistaweb</p>
             <div class="social-links animate-card from-right">
-                <a href="https://github.com/olalekan7857"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/olalekan7857?tab=repositories"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/ademola-ibrahim-5969a2378"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.instagram.com/horlalekan___"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com/ibrahim.ademola.7583"><i class="fab fa-facebook-f"></i></a>
