--- a/Vistawebs_project/static/css/styles.css
+++ b/Vistawebs_project/static/css/styles.css
@@ -50,7 +50,7 @@
     --transition-slow: 0.5s ease;
     
     /* Hero Section Height */
-    --hero-height: 37em;
+    --hero-height: 39em;
 }
 
 /* Base Styles */
@@ -255,6 +255,8 @@ section {
     display: none;
     cursor: pointer;
     z-index: 1001;
+    border: 1px solid var(--white);
+    padding: .3rem .6rem;
 }
 
 .bar {
@@ -270,7 +272,7 @@ section {
 /* Hero Section */
 .hero {
     height: var(--hero-height);
-    background-image: url('/static/images/hero-bg.png');
+    background-image: url('/static/images/Golden_bg.png');
     background-size: cover;
     background-position: center;
     background-attachment: scroll;
@@ -287,20 +289,20 @@ section {
 
 .hero h4 {
     font-size: var(--fs-4);
-    margin-bottom: var(--spacing-sm);
+    margin-bottom: var(--spacing-lg);
     opacity: 0.8;
 }
 
 .hero h1 {
     font-size: var(--fs-1);
-    margin-bottom: var(--spacing-sm);
+    margin-bottom: var(--spacing-lg);
     line-height: 1.1;
     letter-spacing: 2.5px;
 }
 
 .hero h2 {
     font-size: var(--fs-3);
-    margin-bottom: var(--spacing-lg);
+    margin-bottom: var(--spacing-xl);
     /* color: var(--primary-color); */
 }
 
@@ -310,6 +312,12 @@ section {
 
     a {
         color: var(--text-color);
+        border: 2px solid var(--white);
+        background-color: var(--white);
+    }
+
+    a:hover {
+        border: 2px solid var(--white);
     }
 }
 
@@ -1107,7 +1115,8 @@ section {
     }
 
     .about-image {
-        display: none;
+        /* display: none; */
+        width: 100%;
     }
 
     .about-content {
@@ -1135,9 +1144,9 @@ section {
         padding: 0.3rem 0.6rem;
     }
 
-    .hero {
+    /* .hero {
         background-image: url("/static/images/hero-mobile-bg.webp");
-    }
+    } */
 
     .container {
         padding: 0%;
